# EmailAgent

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  commands.txt  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.streamlit/: config.toml
frontend/: .gitignore  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: ComposeTab.tsx  ConversationsTab.tsx  FollowupsTab.tsx  InboxTab.tsx  SettingsTab.tsx  Sidebar.tsx
frontend/src/lib/: api.ts
migrations/: 001_initial_schema.sql  002_sent_emails.sql  003_email_log_and_rules.sql  004_followup_tracker.sql
src/email_agent/: __init__.py  __main__.py  agent.py  api.py  config.py  gmail_client.py  health.py  llm.py  log.py  schemas.py  store.py
tests/: test_smoke.py
ui/: app.py  styles.css
