[project]
name = "email-agent"
version = "0.1.0"
description = "Email triage and drafting agent (LangGraph + OpenAI)"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=1.1.8",
    "langchain>=1.0.0",
    "langchain-openai>=0.3.0",
    "langchain-core>=1.2.0",
    "pydantic>=2.9.0",
    "google-api-python-client>=2.160.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.1",
    "python-dotenv>=1.0.1",
    "rich>=13.9.0",
    "streamlit>=1.56.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/email_agent"]

[tool.ruff]
line-length = 100
target-version = "py311"
